--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "pages/index/index",
     "pages/explore/explore",
     "pages/destination/destination",
-    "pages/poi/poi",
+    "pages/poi_list/poi_list",
     "pages/waypoint/waypoint",
     "pages/user/user",
     "pages/trip/trip"
